hacks upon hacks. in a working state, but some compromises had to be made